[project]
name = "big_calendar"
authors = [
    { name = "Maryn van der Laarse", email = "marynvdl@africanparks.org"},
    { name = "Digit", email = "daniel@digit.co.za"}
]
description = "A calendar showing any doctype with a date"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=14.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"